@@ -299,6 +299,9 @@ include $(srcdir)/luatexdir/am/luatex.am
 ## luahbTeX
 include $(srcdir)/luatexdir/am/luaharfbuzz.am
 
+## texprof
+include $(srcdir)/texprofdir/am/texprof.am
+
 ## XeTeX
 include $(srcdir)/xetexdir/am/xetex.am
 
