@@ -1,3 +1,8 @@
+2024-09-07  Karl Berry  <karl@freefriends.org>
+
+	* Makefile.am (texprof.am): include.
+	* ac/web2c.ac (kpse_tex_progs) <texprof>: new entry in table.
+
 2024-09-06  Andreas Scherer  <https://ascherer.github.io>
 
 	* weav-twill.ch,
